<resources>
    <string name="app_name">HelpNomicUser</string>
    <string name="title_activity_menu_usuario">MenuUsuarioActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_000">0</string>
    <string name="_01">0</string>
    <string name="_00_00_001">00/00/00</string>
    <string name="_02">0</string>
    <string name="_03">0</string>
    <string name="_04">0</string>
    <string name="_00_00_00_2">00/00/00</string>
    <string name="puntos_negativos_1">Puntos Negativos</string>
    <string name="cuotas_faltantes_2">CUOTAS FALTANTES</string>
    <string name="_00_00_00_3">00/00/00</string>
    <string name="para_seleccionar_ndebe_clickear_la_fecha">Para Seleccionar\ndebe CLICKEAR la fecha</string>
    <string name="_0_2">0</string>
    <string name="_0_3">0</string>
    <string name="_0_4">0</string>
    <string name="_0_5">0</string>
    <string name="monto_1">MONTO</string>
    <string name="fecha_1">FECHA</string>
    <string name="peticiones">PETICIONES</string>
    <string name="dudas">DUDAS</string>
    <string name="quejas">QUEJAS</string>
    <string name="todo_1">TODO</string>
    <string name="todo_2">TODO</string>
    <string name="todo_3">TODO</string>
    <string name="_0_6">0</string>
    <string name="_0_7">0</string>
    <string name="_00_00_00_4">00/00/00</string>
    <string name="_0_8">0</string>
    <string name="_00_00_00_5">00/00/00</string>
    <string name="puntos_negativos">Puntos Negativos</string>
    <string name="_00_00_00_6">00/00/00</string>
    <string name="_0_9">0</string>
    <string name="_0_10">0</string>
    <string name="_0_11">0</string>
    <string name="_0_12">0</string>
    <string name="_0_13">0</string>
    <string name="_0_14">0</string>
    <string name="cuotas_faltantes1">CUOTAS FALTANTES</string>
    <string name="monto1">MONTO</string>
    <string name="fecha1">FECHA</string>
    <string name="todo_4">TODO</string>
    <string name="todo_5">TODO</string>
    <string name="todo_6">TODO</string>
    <string name="todo_7">TODO</string>
    <string name="tipo_de_pago2">TIPO DE PAGO</string>
    <string name="formulario_de_solictud_de_renovacion">Formulario De Solictud De Renovación</string>
    <string name="saldo">SALDO</string>
    <string name="button">Button</string>
    <string name="tipo_de_pago">TIPO DE PAGO</string>
    <string name="modalidad_de_pago">MODALIDAD DE PAGO</string>
    <string name="fecha_de_inicio">FECHA DE INICIO</string>
    <string name="cuotas_faltantes2">CUOTAS FALTANTES</string>
    <string name="none1">none</string>
    <string name="none2">none</string>
    <string name="_00001">0000</string>
    <string name="_00002">0000</string>
    <string name="_00003">0000</string>
    <string name="recuerde_ns_lo_podr_renovar_un_cr_dito_nsi_le_faltan_2_o_menos_cuotas">¡RECUERDE!\nSólo podrá renovar un crédito\nsi le faltan 2 o menos CUOTAS</string>
    <string name="monto">MONTO</string>
    <string name="fecha">FECHA</string>
    <string name="cuotas_faltantes">CUOTAS FALTANTES</string>
    <string name="_00_00_002">00/00/00</string>
    <string name="_0_15">0</string>
    <string name="_0_16">0</string>
    <string name="_00_00_003">00/00/00</string>
    <string name="_0_17">0</string>
    <string name="_0_18">0</string>
    <string name="_00_00_00">00/00/00</string>
    <string name="_0_19">0</string>
    <string name="_0_20">0</string>
    <string name="metodo_de_pago">METODO DE PAGO</string>
    <string name="formulario_de_solictud_de_cr_dito">Formulario De Solictud De Crédito</string>
    <string name="saldo1">SALDO</string>
    <string name="button1">Button</string>
    <string name="semanal">SEMANAL</string>
    <string name="quincenal">QUINCENAL</string>
    <string name="solicitar">SOLICITAR</string>
    <string name="fecha12">FECHA</string>
    <string name="button2">Button</string>
    <string name="button13">Button</string>
    <string name="mensual">MENSUAL</string>
    <string name="confirmacion_de_credito">CONFIRMACION DE CREDITO</string>
</resources>