<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foregroundTintMode="src_atop"
    tools:context=".ui.ayudaHelpNomic.AyudaHelpNomicFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.497">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/constraintLayout3"
                        android:layout_width="140dp"
                        android:layout_height="110dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="117dp"
                            android:layout_height="90dp"
                            android:contentDescription="@string/todo_1"
                            android:src="@drawable/ic_quejas_ayudas_help_nomic"
                            app:layout_constraintBottom_toBottomOf="@+id/button6"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.521"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <Button
                            android:id="@+id/button6"
                            android:layout_width="140dp"
                            android:layout_height="110dp"
                            android:backgroundTint="#00FFFFFF"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/constraintLayout4"
                        android:layout_width="140dp"
                        android:layout_height="110dp"
                        android:layout_marginTop="80dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">

                        <ImageView
                            android:id="@+id/imageView3"
                            android:layout_width="117dp"
                            android:layout_height="90dp"
                            android:contentDescription="@string/todo_2"
                            android:src="@drawable/ic_solicitud_ayuda_help_nomic"
                            app:layout_constraintBottom_toBottomOf="@+id/button7"
                            app:layout_constraintEnd_toEndOf="@+id/button7"
                            app:layout_constraintStart_toStartOf="@+id/button7"
                            app:layout_constraintTop_toTopOf="@+id/button7" />

                        <Button
                            android:id="@+id/button7"
                            android:layout_width="140dp"
                            android:layout_height="110dp"
                            android:backgroundTint="#00FFFFFF"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/constraintLayout6"
                        android:layout_width="140dp"
                        android:layout_height="110dp"
                        android:layout_marginTop="80dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/constraintLayout4">

                        <ImageView
                            android:id="@+id/imageView4"
                            android:layout_width="117dp"
                            android:layout_height="90dp"
                            android:contentDescription="@string/todo_3"
                            android:src="@drawable/ic_dudas_ayuda_help_nomic"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="@+id/button8"
                            app:layout_constraintStart_toStartOf="@+id/button8"
                            app:layout_constraintTop_toTopOf="parent" />

                        <Button
                            android:id="@+id/button8"
                            android:layout_width="140dp"
                            android:layout_height="110dp"
                            android:backgroundTint="#00FFFFFF"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/peticiones"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toTopOf="@+id/constraintLayout4"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/textView17"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/dudas"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toTopOf="@+id/constraintLayout6"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/quejas"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toTopOf="@+id/constraintLayout5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>