<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.historialDeCreditos.HistorialDeCreditosFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="370dp"
            android:layout_height="319dp"
            android:layout_marginBottom="150dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintStart_toStartOf="parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="93dp"
                    android:layout_height="match_parent"
                    android:layout_column="0"
                    android:background="#FF6F00"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/fecha"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="#000000"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="93dp"
                    android:layout_height="match_parent"
                    android:background="#FF6F00"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/monto"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="#000000"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="93dp"
                    android:layout_height="match_parent"
                    android:background="#FF6F00"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/cuotas_faltantes"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="#000000"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="93dp"
                    android:layout_height="match_parent"
                    android:background="#FF6F00"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/puntos_negativos"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="#000000"
                    android:textSize="14sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#1A237E"
                    android:text="@string/_00_00_00"
                    android:textColor="#F3F0F0" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/_0"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    app:autoSizeTextType="none" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/_0"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    app:autoSizeTextType="none" />

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/_0"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    app:autoSizeTextType="none" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#1A237E"
                    android:text="@string/_00_00_00"
                    android:textColor="#F3F0F0" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/_0"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    app:autoSizeTextType="none" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/_0"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    app:autoSizeTextType="none" />

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/_0"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    app:autoSizeTextType="none" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/button3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#1A237E"
                    android:text="@string/_00_00_00"
                    android:textColor="#F3F0F0" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/_0"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    app:autoSizeTextType="none" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/_0"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    app:autoSizeTextType="none" />

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/_0"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    app:autoSizeTextType="none" />
            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:layout_marginBottom="20dp"
            android:background="#FDFDFD"
            android:fontFamily="sans-serif-black"
            android:text="@string/para_seleccionar_ndebe_clickear_la_fecha"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#5E5E5E"
            android:textIsSelectable="true"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/tableLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>